--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "NODE_ENV=development DEBUG=log nodemon --exec babel-node server.js",
     "pretest": "NODE_ENV=test npm run db:migrate",
     "test": "NODE_ENV=test jest --no-cache  --detectOpenHandles --runInBand --forceExit",
+    "test:coveralls": "NODE_ENV=test jest --coverage --coverageReporters=text-lcov | coveralls",
     "db:migrate": "node_modules/.bin/sequelize db:migrate",
-    "db:rollup": "node_modules/.bin/sequelize db:migrate:undo:all",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "db:rollup": "node_modules/.bin/sequelize db:migrate:undo:all"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.4",
+    "coveralls": "^3.0.3",
     "jest": "^24.8.0",
     "nodemon": "^1.19.0"
   },
@@ -36,6 +37,7 @@
     "hoek": "^6.1.3",
     "joi": "^14.3.1",
     "morgan": "^1.9.1",
+    "nyc": "^14.1.1",
     "pg": "^7.10.0",
     "sequelize": "^5.8.5"
   },
