--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: node_js
 node_js:
   - "stable"
+services:
+  - postgresql
 install:
   - npm install
+  - npm install -g sequelize-cli
+before_script:
+  - psql -c 'create database smstestdb;' -U postgres
 script:
-  - npm run test
-after_success:
-  - npm run coverage
+  - npm run pretest
+  - npm run test:coveralls
+notifications:
+  email: false
