--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=development DEBUG=log nodemon --exec babel-node server.js",
     "pretest": "NODE_ENV=test npm run db:migrate",
     "test": "NODE_ENV=test jest --no-cache  --detectOpenHandles --runInBand --forceExit",
-    "test:coveralls": "NODE_ENV=test jest --coverage --coverageReporters=text-lcov | coveralls",
+    "test:coveralls": "NODE_ENV=test jest --detectOpenHandles --runInBand --forceExit --coverage --coverageReporters=text-lcov | coveralls",
     "db:migrate": "node_modules/.bin/sequelize db:migrate",
     "db:rollup": "node_modules/.bin/sequelize db:migrate:undo:all"
   },
@@ -25,7 +25,11 @@
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-regenerator": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@babel/runtime": "^7.4.4",
+    "babel-polyfill": "^6.26.0",
     "coveralls": "^3.0.3",
     "jest": "^24.8.0",
     "nodemon": "^1.19.0"
@@ -44,16 +48,15 @@
   "jest": {
     "collectCoverage": true,
     "collectCoverageFrom": [
-      "app/**/*.{js,jsx}",
-      "lib/**/*.{js,jsx}",
+      "app/**/*.{js}",
       "!server.js",
       "!node_modules/"
     ],
     "coveragePathIgnorePatterns": [
       "<rootDir>/config",
-      "<rootDir>/database/migrations",
-      "<rootDir>/database/seeders",
-      "<rootDir>/database/models/index.js"
+      "<rootDir>/migrations",
+      "<rootDir>/seeders",
+      "<rootDir>/app/models/index.js"
     ],
     "setupFilesAfterEnv": [
       "./test_setup.js"
