--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "babel-polyfill": "^6.26.0",
     "coveralls": "^3.0.3",
     "jest": "^24.8.0",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "superagent": "^5.0.5",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
