--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=development DEBUG=log nodemon --exec babel-node server.js",
     "pretest": "NODE_ENV=test npm run db:migrate",
-    "test": "NODE_ENV=test jest --no-cache  --detectOpenHandles --runInBand --forceExit",
-    "test:coveralls": "NODE_ENV=test jest --detectOpenHandles --runInBand --forceExit --coverage --coverageReporters=text-lcov | coveralls",
+    "test": "NODE_ENV=test jest --coverage --no-cache  --detectOpenHandles --runInBand --forceExit",
+    "test:coveralls": "nyc --reporter=text-lcov npm test | coveralls",
     "db:migrate": "node_modules/.bin/sequelize db:migrate",
     "db:rollup": "node_modules/.bin/sequelize db:migrate:undo:all"
   },
