--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "babel-polyfill": "^6.26.0",
     "coveralls": "^3.0.3",
     "jest": "^24.8.0",
-    "nodemon": "^1.19.0",
     "superagent": "^5.0.5",
     "supertest": "^4.0.2"
   },
@@ -45,7 +44,9 @@
     "morgan": "^1.9.1",
     "nyc": "^14.1.1",
     "pg": "^7.10.0",
-    "sequelize": "^5.8.5"
+    "sequelize": "^5.8.5",
+    "sequelize-cli": "^5.4.0",
+    "nodemon": "^1.18.10"
   },
   "jest": {
     "collectCoverage": true,
