Added swagger documentation

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "morgan": "^1.9.1",
     "nyc": "^14.1.1",
     "pg": "^7.10.0",
-    "sequelize": "^5.8.5"
+    "sequelize": "^5.8.5",
+    "swagger-ui-express": "^4.0.4"
   },
   "jest": {
     "collectCoverage": true,
