--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "SMS-Management-Application-API",
+  "name": "population-Management-Application-API",
   "version": "1.0.0",
-  "description": "SMS Management Application API",
+  "description": "Population Management Application API",
   "main": "server.js",
   "scripts": {
     "start": "DEBUG=log nodemon --exec babel-node server.js",
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dessHub/SMS-Management-Application-API.git"
+    "url": "git+https://github.com/dessHub/population-management-system.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/dessHub/SMS-Management-Application-API/issues"
+    "url": "https://github.com/dessHub/population-management-system.git/issues"
   },
-  "homepage": "https://github.com/dessHub/SMS-Management-Application-API#readme",
+  "homepage": "https://github.com/dessHub/population-management-system#readme",
   "devDependencies": {
     "coveralls": "^3.0.3",
     "jest": "^24.8.0",
