--- a/package.json
+++ b/package.json
@@ -42,12 +42,13 @@
     "hoek": "^6.1.3",
     "joi": "^14.3.1",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.10",
     "nyc": "^14.1.1",
     "pg": "^7.10.0",
+    "pushid": "^1.0.0",
     "sequelize": "^5.8.5",
-    "swagger-ui-express": "^4.0.4",
     "sequelize-cli": "^5.4.0",
-    "nodemon": "^1.18.10"
+    "swagger-ui-express": "^4.0.4"
   },
   "jest": {
     "collectCoverage": true,
