--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "helmet": "^3.18.0",
     "hoek": "^6.1.3",
     "joi": "^14.3.1",
     "morgan": "^1.9.1",
